--- a/trunk/app/assets/javascripts/ktv/ie/application.js.erb
+++ b/trunk/app/assets/javascripts/ktv/ie/application.js.erb
@@ -23,8 +23,8 @@
 //= require_self
 
 $(document).ready(function(){
-  App.logo_css_src1 = '<%= Ktv.config.asset_host %><%= asset_path("logotext-all_hover.png") %>'
-  App.logo_css_src0 = '<%= Ktv.config.asset_host %><%= asset_path("logotext-all.png") %>'
+  App.logo_css_src1 = '<%= Ktv.config.asset_host %><%= asset_path("logotext_hover.png") %>'
+  App.logo_css_src0 = '<%= Ktv.config.asset_host %><%= asset_path("logotext.png") %>'
   App.preload([
     App.logo_css_src1
   ]);
