线上开发：css混合第一波

--- a/sub/app/assets/stylesheets/application.css.scss.erb
+++ b/sub/app/assets/stylesheets/application.css.scss.erb
@@ -26,3 +26,17 @@ body{
   right:0;
   clip:rect(0 100% 100% 0);
 }
+#pt{
+  margin-left:14px;
+}
+#chart{
+  margin-left:15px;
+  margin-right:14px;
+  margin-bottom:8px;
+}
+.ie6{
+  #chart{
+    margin-right:0px;
+  }
+}
+
