--- a/sub/app/views/welcome/index.html.erb
+++ b/sub/app/views/welcome/index.html.erb
@@ -1,3 +1,9 @@
+<div id="chart" class="bm bw0 cl">
+  <p class="chart z">今日: <em>0</em><span class="pipe">|</span>昨日: <em>0</em><span class="pipe">|</span>课件: <em>0</em><span class="pipe">|</span>会员: <em>2</em><span class="pipe">|</span>欢迎新会员: <em><a href="home.php?mod=space&amp;username=libo-liu" target="_blank" class="xi2">libo-liu</a></em></p>
+  <div class="y">
+    <a href="forum.php?mod=guide&amp;view=my" title="我的课件" class="xi2">我的课件</a><span class="pipe">|</span><a href="forum.php?mod=guide&amp;view=new" title="最新课件" class="xi2">查看新课件</a></div>
+</div>
+
 <div id="psvr_midder">
    <div class="psvr_content" style="">
       <div class="psvr_contentbox">
