--- a/sub/app/views/welcome/index.html.erb
+++ b/sub/app/views/welcome/index.html.erb
@@ -26,6 +26,7 @@
          <div class="psvr_div_2">
             <div class="psvr_hd">
                <h3 class="psvr">课件 TOP-10</h3>
+               <span class="psvr psvr_moreimg"><a class="psvr" href="<%=courses_path%>"><img class="psvr" src="<%= asset_path 'extand_images/more.gif' %>" alt="查看更多"></a></span>
             </div>
             <div class="psvr_bd">
                <ul class="psvr psvr_seedlist">
@@ -192,4 +193,32 @@
       </div>
       <% end %>
    </div>
-</div>
+
+   <div class="mn">
+
+     <div id="online" class="bm oll">
+       <div class="bm_h">
+         <h3>
+           <strong><a href="home.php?mod=space&amp;do=friend&amp;view=online&amp;type=member">在线会员</a></strong>
+           <span class="xs1">- <strong>1</strong> 人在线
+             - <strong>1</strong> 会员(<strong>0</strong> 隐身),
+             <strong>0</strong> 位游客
+             - 最高记录是 <strong>2</strong> 于 <strong>2012-9-3</strong>.</span>
+         </h3>
+       </div>
+       <dl id="onlinelist" class="bm_c">
+         <dt class="ptm pbm bbda"><img src="/simple/static/image/common/online_admin.gif" /> 管理员 &nbsp; &nbsp; &nbsp; <img src="/simple/static/image/common/online_supermod.gif" /> 超级版主 &nbsp; &nbsp; &nbsp; <img src="/simple/static/image/common/online_moderator.gif" /> 版主 &nbsp; &nbsp; &nbsp; <img src="/simple/static/image/common/online_member.gif" /> 会员 &nbsp; &nbsp; &nbsp; </dt>
+         <dd class="ptm pbm">
+         <ul class="cl">
+           <li title="时间: 11:13">
+           <img src="/simple/static/image/common/online_admin.gif" alt="icon" />
+           <a href="home.php?mod=space&amp;uid=1">psvr</a>
+           </li>
+         </ul>
+         </dd>
+       </dl>
+     </div>
+
+   </div><!--mn-->
+
+</div><!--midder-->
