第一波大面积PHP界面修改

--- a/sub/app/assets/stylesheets/__sub.css.scss.erb
+++ b/sub/app/assets/stylesheets/__sub.css.scss.erb
@@ -129,7 +129,7 @@ table.psvr{
 .psvr_bdwrap {width: 193px;overflow:hidden;margin: 0;padding: 0px;}
 .psvr_mail {border: 1px solid #ddd;margin-top: 6px;padding-bottom: 2px;}
 
-.psvr_seedtable td {padding: 0px 6px;}
+.psvr_seedtable td {padding: 2px 6px;}
 .psvr_seedtable h3 {font-weight: bold;font-size: 14px; text-align: center;}
 .psvr_seedpic {float: left;width: 500px;overflow:hidden;text-align: center;background: #fcfcfc;padding: 5px;border: 1px solid #eee;}
 .psvr_seedlink {float: right;width: 360px;}
@@ -328,7 +328,11 @@ input.psvr_bt {width: 56px;height: 23px;background:url(<%=asset_path('extand_ima
   _position:absolute;
   top:137px;
 }
-.psvr_wtf_logoutdiv, .psvr_wtf_logindiv{width:953px}
+.psvr_wtf_logdiv{
+  position:absolute;
+  top:25px;
+  width:953px;
+}
 
 .ie7{
   .psvr_menu_in{margin-top:27px;}
