--- a/sub/simple/simple/template/default/common/footer.htm
+++ b/sub/simple/simple/template/default/common/footer.htm
@@ -86,6 +86,27 @@
 			</script>
 		<!--{/if}-->
 	</div>
+  <div id="psvr_footer">
+    <div id="psvr_footer_top">
+      <p class="psvr psvr_good_link">
+      <span style="float:left" class="psvr">
+        <a href="/" class="psvr"><!--{echo $PSVR['parsed_setting']['ktv_subname']}-->课件交流系统</a> | 
+        <a onclick="setHomepage('http://<!--{echo PSVR_KTV_SUB}-->.kejian.tv/');" href="javascript:;" class="psvr">设为首页</a> |
+        <a onclick="addFavorite(this.href, '<!--{echo addslashes($PSVR['parsed_setting']['ktv_subname'].'课件交流系统')}-->');return false;" href="http://<!--{echo PSVR_KTV_SUB}-->.kejian.tv/" class="psvr">收藏本站</a> |
+      </span>
+      <span style="float:right;margin-right:20px" class="psvr"><a href="#" class="psvr">背景图为<!--{echo addslashes($PSVR['foto_desc'])}-->.</a></span>
+      </p>
+    </div>
+    <div class="psvr_copyright">
+      <p id="psvr_copyright" class="psvr">
+      版权所有 <a href="kejian.tv" class="psvr">Kejian.TV</a> &copy; 2012 课件交流系统. 课件著作权为原作者所有
+      </p>
+    </div>
+
+  </div>
+</div>
+</div>
+</div><!--psvrsub-->
 
 	<!--{if $upgradecredit !== false}-->
 		<div id="g_upmine_menu" class="tip tip_3" style="display:none;">
@@ -131,7 +152,7 @@
 <!--{/if}-->
 <!--{if $_G['uid'] && $_G['member']['allowadmincp'] == 1 && empty($_G['cookie']['pluginnotice'])}-->
 	<div class="focus plugin" id="plugin_notice"></div>
-	<script type="text/javascript">pluginNotice();</script>
+  <script type="text/javascript">pluginNotice();</script>
 <!--{/if}-->
 <!--{if $_G['member']['newprompt'] && (empty($_G['cookie']['promptstate_'.$_G[uid]]) || $_G['cookie']['promptstate_'.$_G[uid]] != $_G['member']['newprompt']) && $_GET['do'] != 'notice'}-->
 	<script type="text/javascript">noticeTitle();</script>
@@ -143,5 +164,24 @@
 <script type="text/javascript">_attachEvent(window, 'scroll', function(){showTopLink();});</script>
 <!--{/if}-->
 <!--{eval output();}-->
+<script src="{echo asset_path('/application.js')}" type="text/javascript" type="text/javascript"></script>
+<script type="text/javascript" charset="utf-8">
+  window.psvr_bgImg = new Image();
+  window.psvr_bgImg.onload = function() {
+    jQuery.extend(window.psvr_kina, {
+      psvr_height: window.psvr_bgImg.height,
+      psvr_width: window.psvr_bgImg.width
+    });
+    jQuery(window.psvr_bgImg).addClass('psvr_bgimg');
+    jQuery(window.psvr_bgImg).attr('id','ktv_bg');
+    jQuery(window.psvr_bgImg).attr('alt','<!--{echo addslashes($PSVR['foto_desc'])}-->');
+    jQuery('#ktv_bg_container').prepend(window.psvr_bgImg);
+    jQuery.extend(window.psvr_kina, {
+      bg: jQuery('#ktv_bg')[0],
+      timer: setInterval(window.psvr_kina.fix, 200)
+    });
+  };
+  window.psvr_bgImg.src = '<!--{echo addslashes($PSVR['foto_src'])}-->';
+</script>
 </body>
 </html>
