帖子->课件;主题->课件;回帖->课件评论;回复->评论;发帖->上传课件;

--- a/sub/simple/simple/template/default/common/css_sample.htm
+++ b/sub/simple/simple/template/default/common/css_sample.htm
@@ -67,15 +67,15 @@
 				<div class="mn">
 					<div class="bm bmw tl cl">
 						<div class="bm_h cl">
-							<strong>帖子列表:</strong>
+							<strong>课件列表:</strong>
 						</div>
 						<table cellspacing="0" cellpadding="0" class="th">
 							<tr>
 								<td class="icn"></td>
 								<td class="o"></td>
-								<th>主题</th>
+								<th>课件</th>
 								<td class="by">作者</td>
-								<td class="num">回复</td>
+								<td class="num">评论</td>
 								<td class="by">最后发表</td>
 							</tr>
 						</table>
