--- a/sub/simple/simple/template/default/home/follow_feed.htm
+++ b/sub/simple/simple/template/default/home/follow_feed.htm
@@ -362,7 +362,7 @@
 							var sObj = $('subject');
 							$('attachlist').innerHTML = $('fastpostmessage').value = sObj.value = '';
 							strLenCalc(sObj, 'checklen', 80);
-							//var msg = '您的主题已发布，<a href="'+url+'" class="xi2">点击这里查看主题</a>'
+							//var msg = '您的课件已发布，<a href="'+url+'" class="xi2">点击这里查看课件</a>'
 							//showDialog(msg, 'notice', null, null, 0, null, null, null, null, 3);
 						}
 
