--- a/sub/simple/simple/template/default/style/t3/style.css
+++ b/sub/simple/simple/template/default/style/t3/style.css
@@ -62,7 +62,7 @@ body { background: #FCFAF0 url(bgimg.jpg) no-repeat 50% 0; }
 .flw_replybox td table .pnc { background-image: url(pn_rt.png); }
 #flw_post_extra .sec { border-color: #FCF0D7; background-color: #FEFCF8; }
 
-/* 重定义版块快速跳转和侧边导航 */
+/* 重定义课程快速跳转和侧边导航 */
 #fjump_menu li.a a { background-color: #FCF6E6; }
 .bdl, .bdl dt, .bdl dd.bdl_a a { border-color: #F5E3B4; background-color: #FCF6E6; }
 	.bdl dt { background-image: url(titlebg_sd.png); }
